--- a/Urbania-17seat.html
+++ b/Urbania-17seat.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -150,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                                     }
 
                                     .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                                         display: flex;
                                         align-items: center;
                                         flex-wrap: wrap;
@@ -448,6 +467,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
@@ -569,15 +603,17 @@
                 <h1 class="title h-left">Force Urbania 17 Seater on Rent</h1>
 <p class="para">The Force Urbania 17 Seater offers a premium travelling experience with spacious interiors and luxury features. Perfect for mid-size group travel including family trips, corporate tours, weddings, and outstation journeys on Indian roads.</p>
 <p class="para">Our 17 Seater Urbania is sanitized regularly and maintained to the highest standards. It features comfortable pushback Maharaja seats, advanced climate control, and is driven by professional chauffeurs to ensure your safety and comfort.</p>
-<div class="col-12 col-lg-6 col-md-6">
-    <img src="img/a4.jpeg" width="70%" alt="Force Urbania 17 Seater"
-         class="img-responsive center-block mb20">
-</div>
-<div class="col-12 col-lg-6 col-md-6">
-    <img src="img/a5.jpeg" width="55%" alt="Force Urbania 17 Seater"
-         class="img-responsive center-block mb20">
-</div>
 <p class="para">HSR Travel Delhi provides competitive pricing on the Force Urbania 17 Seater to make your group travel seamless and enjoyable.</p>
+
+<div class="col-12 col-lg-12 col-md-12">
+    <img src="img/46723_Force-Urbania-16.jpeg" width="100%" alt="Force Urbania 17 Seater"
+         class="img-responsive center-block mb20">
+</div>
+<!-- <div class="col-12 col-lg-6 col-md-6">
+    <img src="img/a4.jpeg" width="50%" alt="Force Urbania 17 Seater"
+         class="img-responsive center-block mb20">
+</div> -->
+
 <h1 class="title h-center">
     <center>Features Of Hiring Force Urbania 17 Seater:</center>
 </h1>
