--- a/tampu-17seat.html
+++ b/tampu-17seat.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -150,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                                     }
 
                                     .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                                         display: flex;
                                         align-items: center;
                                         flex-wrap: wrap;
@@ -448,6 +467,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
@@ -570,8 +604,12 @@
 <p class="para">The Tempo Traveller 17 Seater is spacious, comfortable, and perfect for large group travel. Suitable for family trips, corporate outings, pilgrimages, and sightseeing, this luxury mini-van offers safety, plush seating, and modern amenities tailored for Indian roads.</p>
 <p class="para">Sanitized interiors, professional chauffeurs, and regular maintenance ensure a pleasant and safe travel experience. The 17-seater tempo traveller features generous luggage space and advanced safety options, making it suitable for all your travel needs in Delhi NCR and surrounding areas.</p>
 
-<div class="col-12 col-lg-12 col-md-12">
-    <img src="img/t5.jpeg" width="80%" alt="Tempo Traveller 17 Seater"
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/1688817927_23) Tempo Traveller 17 Seater on Rent in Pune.webp" width="100%" alt="Tempo Traveller 17 Seater"
+         class="img-responsive center-block mb20">
+</div>
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/tempo-traveller-17-seat-interior.jpg" width="90%" alt="Tempo Traveller 17 Seater"
          class="img-responsive center-block mb20">
 </div>
 <p class="para">At HSR Travel Delhi, the Tempo Traveller 17 Seater is offered at competitive per-kilometer rates for affordable and comfortable travel. Whether it’s business, leisure, or group adventures, this vehicle delivers an unmatched journey experience.</p>
