--- a/tampu-20seat.html
+++ b/tampu-20seat.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                                     }
 
                                     .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                                         display: flex;
                                         align-items: center;
                                         flex-wrap: wrap;
@@ -448,6 +467,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
@@ -569,8 +603,8 @@
                <h1 class="title h-left">Tempo Traveller 20 Seater on Rent</h1>
 <p class="para">The Tempo Traveller 20 Seater offers ample space and comfort for large-scale group travel. Ideal for family gatherings, corporate outings, religious tours, and sightseeing excursions, this mini-van combines safety and luxury with reliability on Indian roads.</p>
 <p class="para">Our 20-seater Tempo Travellers are maintained to the highest standard, sanitized regularly, and driven by professional chauffeurs to ensure a smooth, secure, and memorable journey. Suitable for long and short trips with substantial luggage space and advanced safety features.</p>
-<div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t7.jpeg" width="70%" alt="Tempo Traveller 20 Seater"
+<div class="col-12 col-lg-12 col-md-12">
+    <img src="img/20-seater-tempo-traveller.webp" width="100%" alt="Tempo Traveller 20 Seater"
          class="img-responsive center-block mb20">
 </div>
 <p class="para">HSR Travel Delhi offers the Tempo Traveller 20 Seater at competitive rates tailored to provide stress-free and comfortable travel experiences for groups of all sizes.</p>
