--- a/tampu-26seat.html
+++ b/tampu-26seat.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -150,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                                     }
 
                                     .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                                         display: flex;
                                         align-items: center;
                                         flex-wrap: wrap;
@@ -448,6 +467,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
@@ -569,13 +603,13 @@
               <h1 class="title h-left">Tempo Traveller 26 Seater on Rent</h1>
 <p class="para">The Tempo Traveller 26 Seater is designed for very large group travels like corporate events, large family trips, and other major outings. This luxury mini-van offers exceptional space, comfort and safety amenities, paired with reliable performance on Indian roads.</p>
 <p class="para">Sanitized interiors and professional chauffeurs ensure a premium travel experience. The 26-seater comes with ample luggage capacity and modern safety features to make every journey secure and relaxing in Delhi NCR and beyond.</p>
-<div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t1.jpeg" width="70%" alt="Tempo Traveller 26 Seater"
+<div class="col-12 col-lg-12 col-md-12">
+    <img src="img/26-seater-tempo-traveller.webp" width="100%" alt="Tempo Traveller 26 Seater"
          class="img-responsive center-block mb20">
 </div>
 <p class="para">At HSR Travel Delhi, our Tempo Traveller 26 Seater offers competitive rates with maximum comfort for large groups, ensuring your trip is hassle-free and memorable.</p>
 <h1 class="title h-center">
-    enterer>Features Of Hiring Tempo Traveller 26 Seater:</center>
+      Features Of Hiring Tempo Traveller 26 Seater:</center>
 </h1>
 <style>
     {
@@ -613,7 +647,7 @@
     </div>
 </div>
 <h1 class="title h-center">
-    enterer>Terms & conditions for booking:</center>
+      Terms & conditions for booking:</center>
 </h1>
 <div class="row">
     <div class="column" style="background-color: ;">
