--- a/tata-indica-car.html
+++ b/tata-indica-car.html
@@ -64,17 +64,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -151,7 +145,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -199,6 +193,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -363,10 +367,26 @@
     align-items: center;
     flex-wrap: wrap;
 }
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
 #countryCode {
     width: 90px !important;
     margin-right: 10px;
 }
+
 </style>
 <script>
 
