--- a/Urbania-12seat.html
+++ b/Urbania-12seat.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -150,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                                     }
 
                                     .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                                         display: flex;
                                         align-items: center;
                                         flex-wrap: wrap;
@@ -448,6 +467,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
@@ -568,14 +602,14 @@
 <h1 class="title h-left">Force Urbania 12 Seater on Rent</h1>
 <p class="para">The Force Urbania 12 Seater is a premium luxury tempo traveller widely used for comfortable group travel. Known for its spacious interiors, plush Maharaja seats, and advanced air-conditioning, this vehicle is perfect for family tours, corporate outings, weddings, and outstation trips across Indian roads.</p>
 <p class="para">Our Force Urbania vans come sanitized and well-maintained, driven by experienced chauffeurs to guarantee a safe and enjoyable journey. The van provides ample legroom, charging ports, LED lighting, and ample luggage space to suit every travel need in Delhi NCR and beyond.</p>
-<div class="col-12 col-lg-6 col-md-6">
-    <img src="img/a1.jpg" width="100%" alt="Force Urbania 12 Seater"
+<div class="col-12 col-lg-12 col-md-12">
+    <img src="img/12-seater-force-urbania-van-rental.webp" width="100%" alt="Force Urbania 12 Seater"
          class="img-responsive center-block mb20">
 </div>
-<div class="col-12 col-lg-6 col-md-6">
+<!-- <div class="col-12 col-lg-6 col-md-6">
     <img src="img/a2.jpg" width="40%" alt="Force Urbania 12 Seater"
          class="img-responsive center-block mb20">
-</div>
+</div> -->
 <p class="para">At HSR Travel Delhi, we offer competitive and transparent rental rates for the Force Urbania 12 Seater, ensuring a hassle-free booking experience with utmost comfort and safety for your group travels.</p>
 <h1 class="title h-center">
     <center>Features Of Hiring Force Urbania 12 Seater:</center>
