--- a/about-us.html
+++ b/about-us.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -150,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -350,14 +354,36 @@
     display: none;
 }
 #datetimepicker{width:100%;}
+.my-form {
+    margin-top: 50px;
+}
 #countryCode {
     width: 80px;
     margin-right: 10px;
 }
 
-#mobile { flex: 1; }
+#mobile { 
+    flex: 1;
+    width: calc(100% - 90px); /* Account for countryCode width + margin */
+}
 
 .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+}
+ .input-group {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -776,7 +802,6 @@ $(document).ready(function () {
 <style>
 
 @media only screen and (max-width: 480px) {
-
     .sticky-call {
         position: fixed;
         bottom: 20px;
@@ -798,7 +823,22 @@ $(document).ready(function () {
     .a{
         color:#ffffff !important;
     }
-
+    #countryCode {
+        width: 70px !important;
+        margin-right: 10px;
+    }
+    #mobile {
+        width: calc(100% - 80px) !important;
+    }
+    .input-group {
+        width: 100% !important;
+        display: flex;
+        align-items: center;
+    }
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse {
+        max-height: 350px;
+    }
 }
 
 </style>
