--- a/delhi-to-dharmshalatomcnld-taxi-services.html
+++ b/delhi-to-dharmshalatomcnld-taxi-services.html
@@ -66,17 +66,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -160,7 +154,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -208,6 +202,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
