--- a/tampu-9seat.html
+++ b/tampu-9seat.html
@@ -63,17 +63,11 @@
                                             <li>
                                                 <a class="dropdown-item" href="innova-car.html">Innova Car on Rent</a>
                                             </li>
-                                            <li>
-                                                <a class="dropdown-item" href="etios-taxi-on-rent.html">Etios Taxi On
-                                                    Rent</a>
-                                            </li>
+                                           
                                             <!--<li>-->
                                             <!--	<a class="dropdown-item" href="https://www.delhicar.in/tata-indica-car.php">Tata Indica Car on Rent</a>-->
                                             <!--</li>-->
-                                            <li>
-                                                <a class="dropdown-item" href="maruti-suzuki-wagon-r.html">Maruti Wagon
-                                                    R On Rent</a>
-                                            </li>
+                                             
                                             <li>
                                                 <a class="dropdown-item" href="maruti-ertiga-on-rent.html">Maruti Ertiga
                                                     On Rent</a>
@@ -150,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -198,6 +192,16 @@
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
                                                     Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi.html">
+                                                    Shimla Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-shimla-taxi-services.html">
+                                                    Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
                                         </ul>
@@ -384,6 +388,21 @@
                                     }
 
                                     .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                                         display: flex;
                                         align-items: center;
                                         flex-wrap: wrap;
@@ -448,6 +467,21 @@
                         }
 
                         .mobilegr .input-group {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media(max-width: 480px){  #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+    .navbar-fixed-bottom .navbar-collapse, 
+    .navbar-fixed-top .navbar-collapse{max-height: 350px;}
+    #countryCode{
+    width: 30px !important;
+    margin-right: 10px;
+}
+} .input-group {
                             display: flex;
                             align-items: center;
                             flex-wrap: wrap;
@@ -569,11 +603,17 @@
                 <h1 class="title h-left">Tempo Traveller 9 Seater on Rent</h1>
 <p class="para">The Tempo Traveller  Seater is ideal for comfortable, safe, and spacious group journeys. Perfect for family vacations, office trips, sightseeing tours, and pilgrimages, this luxury mini-van provides plush seating, modern amenities, and unmatched reliability for Indian roads.</p>
 <p class="para">With professional chauffeurs, sanitized interiors, and regular maintenance, our 9-seater tempo traveller ensures a smooth and memorable travel experience. The vehicle offers ample luggage space, versatile adaptability, and advanced safety features to suit all travel needs in Delhi NCR and beyond.</p>
+<p class="para">At HSR Travel Delhi, Tempo Traveller  Seater is available at competitive per-kilometer rates for stress-free, budget-friendly travel. Whether for group tours, family events, corporate outings, or holiday trips, this vehicle delivers the best comfort and service in its class.</p>
+
+
 <div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t2.jpeg" width="70%" alt="Tempo Traveller 9 Seater"
+    <img src="img/9-seater-tempo-traveller.jpg" width="70%" alt="Tempo Traveller 9 Seater"
          class="img-responsive center-block mb20">
 </div>
-<p class="para">At HSR Travel Delhi, Tempo Traveller  Seater is available at competitive per-kilometer rates for stress-free, budget-friendly travel. Whether for group tours, family events, corporate outings, or holiday trips, this vehicle delivers the best comfort and service in its class.</p>
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/9seater.jpg" width="70%" alt="Tempo Traveller 9 Seater"
+         class="img-responsive center-block mb20">
+</div>
 <h1 class="title h-center">
     <center>Features Of Hiring Tempo Traveller  Seater:</center>
 </h1>
